<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="false">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_warning_selector"
            android:drawableLeft="@drawable/ic_action_cancel"
            android:drawableStart="@drawable/ic_action_cancel"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/btn_close"
            android:textColor="@color/text_color"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/line" />

        <Button
            android:id="@+id/btnFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_primary_selector"
            android:drawableLeft="@drawable/ic_action_accept"
            android:drawableStart="@drawable/ic_action_accept"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/btn_file"
            android:textColor="@color/text_color"
            android:textSize="@dimen/abc_text_size_medium_material" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_margin="@dimen/activity_margin_min"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_margin_min"
            android:background="@drawable/border_primary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/primary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_min"
                    android:gravity="center"
                    android:shadowColor="@color/selected_gray"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="16"
                    android:text="@string/txt_leave_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/abc_text_size_headline_material"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/activity_margin_min"
                android:layout_weight="1"
                android:background="@drawable/border_primary"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtLeaveType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_min"
                    android:layout_marginRight="@dimen/activity_margin_min"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/txt_leave_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <LinearLayout
                    android:id="@+id/ll_leavetype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dropdown_primary_selector"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_padding_min">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_expand" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_min"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_margin_min"
                    android:layout_marginRight="@dimen/activity_margin_min"
                    android:layout_weight="1"
                    android:text="@string/txt_from"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/lblTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_min"
                    android:layout_marginStart="@dimen/activity_margin_min"
                    android:layout_weight="1"
                    android:text="@string/txt_to"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_min"
                android:layout_marginBottom="@dimen/activity_margin_min"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/activity_margin_min"
                    android:layout_marginEnd="@dimen/activity_margin_min"
                    android:layout_weight="1"
                    android:background="@drawable/border_primary"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin_min"
                        android:layout_marginRight="@dimen/activity_margin_min"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_date_empty"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color_invert"
                        android:textSize="@dimen/abc_text_size_menu_material" />

                    <LinearLayout
                        android:id="@+id/ll_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dropdown_primary_selector"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_padding_min">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_go_to_today" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_min"
                    android:layout_marginStart="@dimen/activity_margin_min"
                    android:layout_weight="1"
                    android:background="@drawable/border_primary"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin_min"
                        android:layout_marginRight="@dimen/activity_margin_min"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_date_empty"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_color_invert"
                        android:textSize="@dimen/abc_text_size_menu_material" />

                    <LinearLayout
                        android:id="@+id/ll_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dropdown_primary_selector"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_padding_min">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_action_go_to_today" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/lblNoOfDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_min"
                android:layout_weight="1"
                android:text="@string/txt_no_days"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"
                android:visibility="gone" />

            <ph.com.swak.view.FormText
                android:id="@+id/txtNoOfDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_min"
                android:background="@drawable/form_view_selector"
                android:ems="10"
                android:hint="@string/txt_no_days"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_padding_min"
                android:textColor="@color/text_color_invert"
                android:textColorHint="@color/selected_gray"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />


            <TextView
                android:id="@+id/lblReason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin_min"
                android:text="@string/txt_reason"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"
                android:visibility="gone" />

            <ph.com.swak.view.FormText
                android:id="@+id/txtReason"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_margin_min"
                android:background="@drawable/form_view_selector"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/txt_reason"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="@dimen/activity_padding_min"
                android:textColor="@color/text_color_invert"
                android:textColorHint="@color/selected_gray"
                android:textSize="@dimen/abc_text_size_medium_material" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>